--- a/posters/posters/tutorial/tutorial.jinja2
+++ b/posters/posters/tutorial/tutorial.jinja2
@@ -1,4 +1,4 @@
-{% extends "base/base.jinja2" %}
+{% extends "templates/mit/mit.jinja2" %}
 
 {## Header ##}
 
@@ -16,6 +16,7 @@
 {% set pub_datetime_iso = "2020-09-08" %}
 {% set pub_date = "September 8, 2020" %}
 
+{# Custom styles and JS for a particular poster #}
 {% block custom_head %}
 <style type="text/css">
   html { font-size: 1.15rem }
@@ -31,16 +32,6 @@
 {% block affiliations %}
   <sup>a</sup><a property="sourceOrganization">MIT CSAIL</a>,
   <sup>b</sup><a property="sourceOrganization">UC Berkeley</a>
-{% endblock %}
-
-{# Logos shown on the left side #}
-{% block header_left %}
-  <a href="{{ project_url }}"><img src="figs/logo.svg" alt="Tutorial logo"></a>
-{% endblock %}
-
-{# Logos shown on the right side #}
-{% block header_right %}
-  <a href="https://csail.mit.edu"><img style="background: white" src="figs/csail.png" alt="MIT CSAIL Logo"></a>
 {% endblock %}
 
 {### Footer ##}
@@ -340,7 +331,7 @@
   </article>
 
   <figure style="flex-grow: 9999999">
-    <img style="width: 70%" src="figs/logo.svg" alt="Project logo" />
+    <img style="width: 70%" src="figs/csail/logo.svg" alt="Project logo" />
     <figcaption>A stand-alone figure to fill the remaining space.</figcaption>
   </figure>
 {% endblock %}
