--- a/posters/templates/mit/mit.jinja2
+++ b/posters/templates/mit/mit.jinja2
@@ -9,3 +9,7 @@
 {% block header_right %}
   <a href="https://csail.mit.edu"><img style="background: white" src="figs/csail/csail.png" alt="MIT CSAIL Logo"></a>
 {% endblock %}
+
+{% block highlightjs_theme %}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/monokai.min.css" integrity="sha512-RLF8eOxhuwsRINc7r56dpl9a3VStqrXD+udWahutJrYdyh++2Ghnf+s4jFsOyryKZt/GNjPwbXVPH3MJpKrn2g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{% endblock %}
