initial asplos poster draft

--- a/posters/base/base.scss
+++ b/posters/base/base.scss
@@ -18,7 +18,7 @@ $header-img-height: 5rem;
 
 $columns: 4;
 $column-min-width: 22.5rem;
-$column-max-width: 30rem;
+$column-max-width: 50rem;
 
 $thin-space: 0.25rem;
 $mid-space: 0.5rem;
@@ -162,7 +162,7 @@ b {
             }
         }
         > footer {
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr auto 1fr;
             > :first-child {
                 text-align: left;
                 padding-left: $grid-gap;
@@ -171,6 +171,9 @@ b {
                 text-align: right;
                 padding-right: $grid-gap;
             }
+        }
+        > main {
+            overflow: hidden;
         }
     }
 }
