--- a/posters/posters/sic-asplos23/sic-asplos23.jinja2
+++ b/posters/posters/sic-asplos23/sic-asplos23.jinja2
@@ -19,7 +19,7 @@
 {# Custom styles and JS for a particular poster #}
 {% block custom_head %}
 <style type="text/css">
-  /*html { font-size: 1.15rem }*/
+  html { font-size: 1.15rem }
 </style>
 {% endblock %}
 
@@ -84,274 +84,156 @@
       <li>ESSENT and FireSim do not support coverage</li>
     </ul>
 
-    <p><strong>2.</strong> Merging coverage across simulators (SW, FPGA, formal) is difficult</p>
+    <p><strong>2.</strong> Merging coverage across simulators (SW, FPGA, formal) requires uniform coverage instrumentation</p>
 
     <p><strong>3.</strong> New RTL hardware languages lack support for source-level coverage collection</p>
 
     <img src="./figs/sic-asplos23/losing_semantics.svg" />
   </article>
 
-<!--
   <article>
-    <header><h3>Using this template</h3></header>
-    <p>There are two ways to use this template: directly editing the HTML, and using Jinja2 templates.</p>
+    <header><h3>Our Proposal</h3></header>
+    <p class="center">Implement coverage instrumentation with compiler passes on a hardware IR vs. baking coverage instrumentation into each simulator</p>
+
+    <img src="./figs/sic-asplos23/coverage_figure_m_n.svg" width=80% />
+
   </article>
 
   <article>
-    <header><h3>Editing the HTML directly</h3></header>
+    <header><h3>Benefits of Our Approach</h3></header>
 
-    <p>This is the simplest way to get started, since it just requires a text editor:</p>
-
-    <ol>
-      <li>Download the <a href="https://github.com/cpitclaudel/academic-poster-template/releases/latest">latest release</a> of this template (or download the <a href="https://raw.githubusercontent.com/cpitclaudel/academic-poster-template/main/docs/tutorial/poster.html">webpage</a> and the corresponding <a href="https://raw.githubusercontent.com/cpitclaudel/academic-poster-template/main/docs/poster.css">stylesheet</a> directly from the <a href="https://github.com/cpitclaudel/academic-poster-template/tree/main/docs/tutorial/">repository</a>).</li>
-      <li>Adjust the metadata and add blocks to the <code>main</code> section.</li>
-    </ol>
-  </article>
-
-  <article>
-    <header><h3>Using Jinja2</h3></header>
-
-    <p>The poster is a Jinja2 template, so you can inherit from it and fill in the relevant fields and the contents.</p>
-
-    <ol>
-      <li>Clone the <a href="https://github.com/cpitclaudel/academic-poster-template/">GitHub repository</a>.</li>
-      <li>Install jinja2 (<code>pip install jinja2</code>)</li>
-      <li>Create your own jinja2 template, starting from <a href="https://github.com/cpitclaudel/academic-poster-template/tree/main/docs/tutorial.jinja2">this tutorial</a>.</li>
-      <li>Render to HTML using the <code>render.py</code> script:<br/>
-        <code>./render.py your_jinja2_poster.jinja output.html</code>
-      </li>
-    </ol>
-
-    <b>The template for this tutorial includes documentation for each variable and block.</b>
-  </article>
-
-  <article>
-    <header><h3>Editing the Less Stylesheet</h3></header>
-
-    <p>This poster is styled with a <a href="https://lesscss.org/">Less stylesheet</a>. Edit the stylesheet to customize colors and font sizes.</p>
-
-    <ol>
-      <li>Install lessc (<code>npm install less -g</code>)</li>
-      <li>Edit <code>poster.less</code></li>
-      <li>Run: <code>lessc poster.less docs/poster.css</code></li>
-    </ol>
-  </article>
-
-  <article>
-    <header><h3>Livereload</h3></header>
-
-    <p>To avoid manually regenerating .html/.css from .jinja2/.less on every edit, use livereload to watch for changes, regenerate files, and refresh the browser.</p>
-
-    <ol>
-      <li>Install livereload (<code>pip install livereload</code>)</li>
-      <li>Run <code>./serve.py</code>
-      <li>Browse to <code>localhost:5500/docs/tutorial/poster.html</code>
-      <li>Make changes to a .jinja2/.less file, save, and see the update in the browser</li>
-    </ol>
-  </article>
-
-  <article>
-    <header><h3>Poster layout</h3></header>
-
-    <p>Posters made using this template are composed of a sequence of blocks.  You can use CSS to customize the way the blocks are designed; by default they scroll left to right on wide screens and top to bottom on narrow screens.</p>
-
-    <b>Try resizing your browser to see how the poster's layout changes.</b>
-  </article>
-
-  <article>
-    <header><h3>Block template</h3></header>
-
-    <p>Each block has the following structure (fill in the italicized parts):</p>
-
-    <pre>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article">article</a>&gt;
-  &lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header">header</a>&gt;&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h">h3</a>&gt;<i>Block title</i>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h3">h3</a>&gt;&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header">header</a>&gt;
-
-  <i>Block contents:
-    paragraphs (&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p">p</a>&gt;),
-    figures (&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/figure">figure</a>&gt;),
-    lists (&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul">ul</a>&gt;, &lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol">ol</a>&gt;),
-    images (&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img">img</a>&gt;, &lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/object">object</a>&gt;),
-    tables (&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table">table</a>&gt;), …</i>
-&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article">article</a>&gt;</pre>
-  </article>
-
-  <article>
-    <header><h3>Structural markup</h3></header>
-
-    <p>The following markup is useful to structure content blocks:</p>
     <ul>
-      <li>
-        <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p">p</a>&gt;</code>
-        <p style="margin: 0">Paragraphs</p>
-        <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p">p</a>&gt;</code>
+      <li>Uniform coverage specification for all simulators<br />
+          <span style="line-height:1.6;"><strong>→</strong> Trivial merging of coverage across simulators</span>
       </li>
-
-      <li>
-        <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul">ul</a>&gt;</code>
-        <ul>
-          <li><code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li">li</a>&gt;</code>…<code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li">li</a>&gt;</code></li>
-        </ul>
-        <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul">ul</a>&gt;</code> (Plain lists)
+      <li>Simulators only have to implement one coverage primitive<br />
+          <span style="line-height:1.6;"><strong>→</strong> New simulators instantly get automated coverage</span>
       </li>
-
-      <li>
-        <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol">ol</a>&gt;</code>
-        <ol>
-          <li><code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li">li</a>&gt;</code>…<code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li">li</a>&gt;</code></li>
-        </ol>
-        <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol">ol</a>&gt;</code> (Numbered lists)
-      </li>
-
-      <li>
-        <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/b">b</a>&gt;</code>
-        <b>Call-outs (<i>alerts</i>)</b>
-        <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/b">b</a>&gt;</code>
-      </li>
+      <li>Source HDL mapping captured during coverage instrumentation for report annotation</li>
+      <li>Unified report generator for different coverage metrics and simulators</li>
     </ul>
   </article>
 
   <article>
-    <header><h3>Inline markup</h3></header>
-      <ul>
-        <li>
-          <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a">a</a> href="<var>url</var>"&gt;</code>
-          <a href="url">Links</a>
-          <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a">a</a>&gt;</code>
-        </li>
+    <header><h3>The Cover Primitive</h3></header>
+    <p class="center"><code>cover(clock, predicate, enable)</code></p>
 
-        <li>
-          <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/em">em</a>&gt;</code>
-          <em>Emphasized text</em>
-          <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/em">em</a>&gt;</code>
-        </li>
+    <ul>
+      <li><code>cover</code> is injected by coverage instrumentation passes in the hardware IR (e.g. FIRRTL) compiler</li>
+    </ul>
 
-        <li>
-          <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong">strong</a>&gt;</code>
-          <strong>Important text</strong>
-          <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong">strong</a>&gt;</code>
-        </li>
+    <img src="./figs/sic-asplos23/cover.svg" />
 
-        <li>
-          <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/i">i</a>&gt;</code>
-          <i>Scientific terms, foreign words</i>
-          <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/i">i</a>&gt;</code>
-        </li>
-
-        <li>
-          <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/var">var</a>&gt;</code>
-          <var>Math variables, placeholders</var>
-          <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/var">var</a>&gt;</code>
-          </li>
-
-        <li>
-          <code>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/code">code</a>&gt;</code>
-          <code>Inline code snippets</code>
-          <code>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/code">code</a>&gt;</code>
-        </li>
-      </ul>
-
-      <b>Not sure which one to use? Check out <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/i">Mozilla's explanations</a>.  Using appropriate markup helps screen readers a lot.</b>
+    <ul>
+      <li>All simulators implement <code>cover</code> as a counter which increments when the <code>predicate</code> is true on a <code>clock</code> edge</li>
+    </ul>
   </article>
 
   <article>
-    <header><h3>Figures</h3></header>
+    <header><h3>Implementing Line Coverage</h3></header>
 
-    <p>Use the following code to insert a figure:</p>
-
-    <pre>&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/figure">figure</a>&gt;
-  <i>Figure contents:
-    images (&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img">img</a>&gt;, &lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/object">object</a>&gt;),
-    tables (&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table">table</a>&gt;),
-    quotes, …</i>
-  &lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/figcaption">figcaption</a>&gt;<i>Figure caption</i>&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/figcaption">figcaption</a>&gt;
-&lt;/<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/figure">figure</a>&gt;</pre>
-
-    <hr/>
-
-    <figure>
-      <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg" width="197" height="64" alt="An orange shield with a white 5 emblazoned on it and the letters HTML above it.">
-
-      <figcaption>The HTML5 logo (<i>Source: <a href="https://www.w3.org/html/logo/">W3C</a></i>)</figcaption>
-    </figure>
+    <img src="./figs/sic-asplos23/coverage_line_coverage.svg" width=100% />
   </article>
 
   <article>
-    <header><h3>Images</h3></header>
+    <header><h3>Implementing Toggle Coverage</h3></header>
 
-    <p>Use the following code to include an image:</p>
+    <img src="./figs/sic-asplos23/coverage_toggle_coverage.svg" width=80% />
 
-    <pre class="center-self">&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img">img</a> src="<var>source url</var>"
-     alt="<var>image description</var>"&gt;</pre>
+    <ul>
+      <li>Capture a net's value in the previous clock cycle with a register</li>
+      <li>Cover the output of an XOR between the register output and the current net value</li>
+      <li>Compiler pass performs alias analysis and can selectively instrument register, IOs, memories, and wires</li>
+    </ul>
+  </article>
 
-    <p>Prefer scalable images (SVG) for technical drawings and figures.</p>
+  <!--
+  <article>
+    <header><h3>Implementing FSM Coverage</h3></header>
 
-    <small>Most technical drawing software supports saving as SVG; if yours does not, you can typically save to PDF, which can then easily be <a href="https://superuser.com/questions/381125/how-do-i-convert-an-svg-to-a-pdf-on-linux">converted to SVG</a> (this is useful for TikZ diagrams in particular).</small>
+    <ul>
+      <li>Designers typically use <code>ChiselEnum</code> to specify FSM states</li>
+      <li>The FSM coverage pass designates registers that contain values from a <code>ChiselEnum</code> as FSM state registers</li>
+      <li>We analyze each next state expression to determine feasible transitions</li>
+    </ul>
 
-    <p>Make sure to include an <code>alt</code> attribute: it will be read by assistive technology and displayed while the image is loading.
-    </p>
+    <img src="./figs/sic-asplos23/coverage_fsm_coverage.svg" width=90% />
+  </article>
+  -->
+
+  <article>
+    <header><h3>Overhead of Coverage Instrumentation</h3></header>
+    <!--
+    <p class="center">Coverage instrumentation implemented via hardware IR compiler passes has benefits</p>
+
+    <ul>
+      <li>Unifies coverage specification and report generation across simulators</li>
+      <li>Makes merging coverage across simulators easy</li>
+    </ul>
+    -->
+
+    <p class="center">Does our coverage instrumentation methodology come with performance overheads over a simulator's "built-in" coverage instrumentation?</p>
+
+    <img src="./figs/sic-asplos23/sic-overhead.png" width=80% />
+
+    <p class="center">There is no performance overhead! <small></small></p>
   </article>
 
   <article>
-    <header><h3>Mathematics</h3></header>
+    <header><h3>Coverage for FPGA Emulation (Firesim)</h3></header>
 
-    <p>This poster template loads <a href="https://www.mathjax.org/">MathJax</a> by default, so you can include inline math in backslash-parentheses <code>\( … \)</code> and display math in backslash-brackets <code>\[ … \]</code>:</p>
+    <ul>
+      <li>Adding support for the FIRRTL <code>cover</code> primitive adds support for all coverage metrics!</li>
+    </ul>
 
-    <p class="center">\((\lambda x. e) v \downarrow e[x/v]\) (β-reduction)</p>
+    <img src="./figs/sic-asplos23/coverage_firesim_scan_chain.svg" width=80% />
 
-    \[\frac
-      {\langle \mathtt{expr}, s\rangle \Downarrow v}
-      {\langle \mathtt{var := expr}, s\rangle \downarrow s\left[\mathtt{var} \leftarrow v\right]}
-     \small{\text{Assign}}\]
-
-    <p>Using MathJax allows users of assistive technology to browse the equations.</p>
-    </article>
-
-  <article>
-    <header><h3>Highlighted Code Blocks</h3></header>
-
-    <p>This poster template loads <a href="https://highlightjs.org/">highlight.js</a> by default to highlight code blocks.</p>
-
-    <pre class="center-self">
-&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/pre">pre</a>&gt;&lt;<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/code">code</a> class="language-python"&gt;
-  <var>code snippet</var>
-  <var>...</var>
-&lt;/code&gt;&lt;/pre&gt;</pre>
-    <pre><code class="language-python">def fibonacci(num):
-    nb1, nb2 = 0, 1
-    for nbr in range(2, num+1):
-        nb1, nb2 = nb2, nb1 + nb2
-    return nb2</code></pre>
-    <small>Copy tags <a href="https://cdnjs.com/libraries/highlight.js">from here</a> into poster.jinja2 to add support for more exotic languages or to change the highlight styling</small>
+    <ul>
+      <li>The <code>cover</code> primitive is implemented with a saturating counter connected to a scan chain</li>
+    </ul>
   </article>
 
   <article>
-    <header><h3>Additional styling</h3></header>
+    <header><h3>Area Overhead of Firesim Coverage</h3></header>
 
-    <p>The template's stylesheet defines a few extra CSS classes:</p>
-
-    <p class="boxed center"><code>.center</code><br/>
-      (horizontally centered text)</p>
-
-    <p class="boxed justify-center"><code>.justify-center</code><br/>
-      (horizontally centered block)</p>
-
-    <div class="boxed center">
-      <div class="center columns" style="height: 3em">
-        <code style="align-self: start">.columns-top</code>
-        <code style="align-self: center">.columns-center</code>
-        <code style="align-self: end">.columns-bottom</code>
-      </div>
-      <span>(columns)</span>
-    </div>
-
-    <small>To customize column widths, use <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns"><code>grid-template-columns</code></a>; for example, for 40%/60% widths, use the following snippet:
-      <pre class="center">style="grid-template-columns: 40fr 60fr"</pre>
-    </small>
+    <img src="./figs/sic-asplos23/firesim_utilization.png" width=80% />
+    <ul>
+      <li>8-bit coverage counters provide sufficient resolution with minimal overhead</li>
+    </ul>
   </article>
 
-  <figure style="flex-grow: 9999999">
-    <img style="width: 70%" src="figs/csail/logo.svg" alt="Project logo" />
-    <figcaption>A stand-alone figure to fill the remaining space.</figcaption>
-  </figure>
--->
+  <!--
+  <article>
+    <header><h3>Performance Overhead of Firesim Coverage</h3></header>
+
+    <img src="./figs/sic-asplos23/firesim_fmax.png" width=80% />
+
+    <ul>
+      <li>Similarly, \(f_{max}\) is not affected for small counter widths</li>
+    </ul>
+  </article>
+  -->
+
+  <!--
+  <article>
+    <header><h3>Coverage Merging and Pruning</h3></header>
+
+    <ul>
+      <li>Instrumenting every coverpoint for Firesim is wasteful since many coverpoints are trivially covered in RTL simulation</li>
+      <li>By pruning coverpoints that were covered 10+ times in RTL simulation with a RISC-V test suite, we can <em>prune the number of coverpoints by <strong>42%</strong></em></li>
+    </ul>
+  </article>
+  -->
+
+  <article>
+    <header><h3>Extensive Simulator Support</h3></header>
+
+    <img src="./figs/sic-asplos23/upshot.svg" width=100% />
+
+    <ul>
+      <li>Before this work, Verilator only supported line and toggle coverage. The other simulators didn't support any coverage.</li>
+      <li>Now, three RTL simulators (Verilator, Treadle, ESSENT), an FPGA-based simulator (Firesim), and a formal tool (Symbiyosys) support all these coverage metrics</li>
+    </ul>
+  </article>
+
 {% endblock %}
