minor fixes - vertically center final article, reduce size of berkeley logo, add favicon

--- a/posters/posters/sic-asplos23/index.jinja2
+++ b/posters/posters/sic-asplos23/index.jinja2
@@ -19,7 +19,6 @@
 {# Custom styles and JS for a particular poster #}
 {% block custom_head %}
 {% endblock %}
-
 {% block authors %}
   {# Put authors here, with one link per author. #}
   <a property="author">Kevin Laeufer<sup>a</sup></a>,
@@ -76,7 +75,7 @@
 </article>
 
 <article>
-<header><h3>Problem 2: Verilog coverage inadequate replacement for native Chisel coverage</h3></header>
+<header><h3>Problem 2: Verilog coverage is an inadequate replacement for native Chisel coverage</h3></header>
 <img src="./figs/sic-asplos23/3_coverage_line_coverage_of_verilog.svg" style="width: 80%;" />
 <figcaption>
 In this example, the translation to structural Verilog
@@ -182,7 +181,7 @@ always have the same value.
 </article>
 
 
-<article>
+<article style="display:grid; align-content:center;">
 
 <div class="columns-center" style="grid-template-columns: 60fr 40fr"><div>
 <header><h3>More Features</h3></header>
