--- a/posters/posters/sic-asplos23/index.scss
+++ b/posters/posters/sic-asplos23/index.scss
@@ -1,3 +1,11 @@
 @use 'templates/slice/slice.scss';
 
 html { font-size: 1.15rem }
+
+@media print {
+    header > aside {
+        img {
+            max-width: 215px;
+        }
+    }
+}
