--- a/posters/base/base.jinja2
+++ b/posters/base/base.jinja2
@@ -13,6 +13,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
   <head>
     <meta charset="utf-8">
     <title>{{ webpage_title }}</title>
+    <link rel="icon" href="figs/csail/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
 
