consistent capitalization of firrtl

--- a/posters/posters/sic-asplos23/index.jinja2
+++ b/posters/posters/sic-asplos23/index.jinja2
@@ -89,7 +89,7 @@ imply complete line coverage of the Chisel source.
 <header><h3>Our Solution: Simulator Independent Coverage</h3></header>
 <img src="./figs/sic-asplos23/coverage_poster_overview.svg" style="width: 95%;" />
 <figcaption>
-We show how a single new <code>cover</code> statement allows us to move all coverage instrumentation into the firrtl compiler.
+We show how a single new <code>cover</code> statement allows us to move all coverage instrumentation into the FIRRTL compiler.
 Adding support for the <code>cover</code> statement to a simulator is fairly simple.
 </figcaption>
 </article>
