--- a/posters/posters/sic-asplos23/index.jinja2
+++ b/posters/posters/sic-asplos23/index.jinja2
@@ -192,7 +192,7 @@ always have the same value.
   <li>Formal cover trace generation</li>
 </ul>
 </div><div>
-<img src="./figs/sic-asplos23/project_page_qr.png" width=100% />
+<img src="./figs/sic-asplos23/project_page_qr.png" style="width: 116%; max-width: none; position:relative; right:24px; margin-top:-10px;" />
 <figcaption>Paper PDF, Code & Slides</figcaption>
 </div></div>
 </article>
