use matjax for f_max

--- a/posters/posters/sic-asplos23/index.jinja2
+++ b/posters/posters/sic-asplos23/index.jinja2
@@ -167,7 +167,7 @@ always have the same value.
 </article>
 
   <article>
-    <header><h3>FireSim: Utilization and f_max</h3></header>
+    <header><h3>FireSim: Utilization and \(f_{max}\)</h3></header>
     <div class="columns-center" style="grid-template-columns: 50fr 50fr">
     <img src="./figs/sic-asplos23/9_firesim_utilization.png" width=100% />
     <img src="./figs/sic-asplos23/10_firesim_fmax.png" width=100% />
