--- a/posters/base/base.scss
+++ b/posters/base/base.scss
@@ -10,455 +10,454 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
 */
 
 
-//////////////////////
-// Global variables //
-//////////////////////
+@mixin base($color-title, $color-accent, $color-bg-light, $color-bg-dark, $color-header-bg, $color-header-text) {
+    $header-img-height: 5rem;
 
-$header-img-height: 5rem;
+    $columns: 4;
+    $column-min-width: 22.5rem;
+    $column-max-width: 40rem;
 
-$columns: 4;
-$column-min-width: 22.5rem;
-$column-max-width: 40rem;
+    $thin-space: 0.25rem;
+    $mid-space: 0.5rem;
+    $thick-space: 0.75rem;
 
-$thin-space: 0.25rem;
-$mid-space: 0.5rem;
-$thick-space: 0.75rem;
+    $thin-space-em: 0.25em;
+    $mid-space-em: 0.5em;
+    $thick-space-em: 0.75em;
 
-$thin-space-em: 0.25em;
-$mid-space-em: 0.5em;
-$thick-space-em: 0.75em;
+    $grid-gap: 1rem;
 
-$grid-gap: 1rem;
+    ///////////////////
+    // Poster layout //
+    ///////////////////
 
-$color-title: #ffffff !default;
-$color-accent: #FFBF00 !default;
-$color-bg-light: #F5F5DC !default;
-$color-bg-dark: #000000 !default;
-$color-header-bg: #ffffff !default;
-$color-header-text: #000000 !default;
+    a {
+        color: inherit;
+    }
 
-///////////////////
-// Poster layout //
-///////////////////
+    address {
+        font-style: normal;
+    }
 
-a {
-    color: inherit;
-}
+    h1, h2, h3 {
+        margin: 0;
+    }
 
-address {
-    font-style: normal;
-}
+    pre, code, samp, .monospace {
+        font-family: "Ubuntu Mono", monospace;
+    }
 
-h1, h2, h3 {
-    margin: 0;
-}
+    b {
+        display: block;
+        text-align: center;
+        font-weight: 500;
+    }
 
-pre, code, samp, .monospace {
-    font-family: "Ubuntu Mono", monospace;
-}
+    // https://stackoverflow.com/questions/42176419/targeting-flex-items-on-the-last-or-specific-row
+    @media all and (min-width: 2 * $column-max-width) {
+        body {
+            display: grid;
+            grid-template-rows: auto 1fr auto;
 
-b {
-    display: block;
-    text-align: center;
-    font-weight: 500;
-}
+            > header, > footer {
+                grid-auto-flow: column;
+                justify-content: space-between;
+            }
 
-// https://stackoverflow.com/questions/42176419/targeting-flex-items-on-the-last-or-specific-row
-@media all and (min-width: 2 * $column-max-width) {
+            > header {
+                grid-template-columns: auto 1fr auto;
+            }
+        }
+
+        main {
+            align-content: flex-start;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            overflow: auto;
+            padding: calc($grid-gap / 2);
+
+            // This phantom element gives a bit of breathing room when scrolling
+            &::after {
+                content: " ";
+                display: block;
+                flex-basis: 100%;
+                width: calc($grid-gap / 2);
+            }
+
+            > * {
+                flex-grow: 1;
+                margin: calc($grid-gap / 2);
+                max-width: $column-max-width;
+                min-width: $column-min-width;
+                width: calc(100% / $columns - $grid-gap);
+            }
+        }
+    }
+
+    @media not all and (min-width: 2 * $column-max-width) {
+        body {
+            > header, > footer {
+                grid-auto-flow: row;
+                justify-content: center;
+            }
+
+            > header > div {
+                margin-bottom: $thick-space;
+            }
+        }
+
+        main > * {
+            margin: $grid-gap;
+        }
+
+        article {
+            overflow-x: auto;
+            overflow-y: hidden; // FF bug
+        }
+    }
+
+    @media not print {
+        body > header {
+            img {
+                max-width: 150px;
+            }
+        }
+    }
+
+    @media print {
+        html {
+            zoom: 1.5;
+        }
+        body {
+            > header {
+                //grid-template-columns: auto 1fr auto;
+                grid-template-columns: 1fr auto 1fr;
+                aside:first-of-type {
+                    text-align: left;
+                    padding-left: $grid-gap;
+                }
+                aside:last-of-type {
+                    text-align: right;
+                    padding-right: $grid-gap;
+                    grid-template-columns: auto auto;
+                    justify-content: end;
+                }
+                h1 {
+                    font-size: 2.5rem !important;
+                }
+
+                address {
+                    font-size: 1rem !important;
+                }
+            }
+            > footer {
+                grid-template-columns: 1fr auto 1fr;
+                > :first-child {
+                    text-align: left;
+                    padding-left: $grid-gap;
+                }
+                > :last-child {
+                    text-align: right;
+                    padding-right: $grid-gap;
+                }
+            }
+            > main {
+                overflow: hidden;
+            }
+        }
+    }
+
+    html, body {
+        height: 100%;
+        width: 100%;
+    }
+
     body {
-        display: grid;
-        grid-template-rows: auto 1fr auto;
+        font-family: 'Fira Sans Condensed', 'Fira Sans', sans-serif;
+        margin: 0;
 
         > header, > footer {
-            grid-auto-flow: column;
-            justify-content: space-between;
+            align-items: center;
+            background: $color-header-bg;
+            color: $color-header-text;
+            display: grid;
+            grid-gap: $mid-space;
+            padding: $mid-space;
+            text-align: center;
         }
 
         > header {
-            grid-template-columns: auto 1fr auto;
+            font-size: 80%;
+
+            img {
+                max-height: $header-img-height;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+                font-weight: 600;
+            }
+
+            h2 {
+                font-size: 1.15rem;
+                font-weight: 500;
+            }
+
+            address {
+                margin-bottom: $thin-space;
+                margin-top: $thin-space;
+            }
+
+            .publication-info {
+                display: none;
+            }
+
+            time {
+                margin-top: $thin-space;
+            }
+
+            aside:last-of-type {
+                display:grid;
+                grid-template-columns: auto auto;
+                a {
+                    display: grid;
+                    align-content: center;
+                }
+            }
         }
     }
 
     main {
-        align-content: flex-start;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        overflow: auto;
-        padding: calc($grid-gap / 2);
-
-        // This phantom element gives a bit of breathing room when scrolling
-        &::after {
-            content: " ";
-            display: block;
-            flex-basis: 100%;
-            width: calc($grid-gap / 2);
-        }
+        box-sizing: border-box;
+        min-height: 0;
 
         > * {
-            flex-grow: 1;
-            margin: calc($grid-gap / 2);
-            max-width: $column-max-width;
-            min-width: $column-min-width;
-            width: calc(100% / $columns - $grid-gap);
+            box-sizing: border-box;
         }
-    }
-}
 
-@media not all and (min-width: 2 * $column-max-width) {
-    body {
-        > header, > footer {
-            grid-auto-flow: row;
+        > figure {
+            align-content: center;
+            display: flex;
             justify-content: center;
         }
 
-        > header > div {
-            margin-bottom: $thick-space;
+        img, object {
+            align-self: center;
+            justify-self: center;
+            max-width: 100%;
+            vertical-align: middle;
         }
-    }
 
-    main > * {
-        margin: $grid-gap;
+        figure {
+            text-align: center;
+
+            img {
+                width: 100%;
+            }
+
+            img:first-of-type:last-of-type,
+            object:first-of-type:last-of-type {
+                display: block;
+                margin: auto;
+            }
+
+            figcaption {
+                display: block;
+                margin-top: $mid-space;
+            }
+        }
     }
 
     article {
-        overflow-x: auto;
-        overflow-y: hidden; // FF bug
-    }
-}
+        background: $color-bg-light;
+        display: flex;
+        flex-direction: column;
+        hyphens: none;
+        line-height: 1.35;
+        padding: 0 $mid-space $mid-space $mid-space;
 
-@media not print {
-    body > header {
-        img {
-            max-width: 150px;
+        p, ul, ol, pre, div, figure, hr {
+            margin: 0;
         }
-    }
-}
 
-@media print {
-    html {
-        zoom: 1.5;
-    }
-    body {
+        > *, > p, > ul, > ol, > pre, > div, > figure, > hr {
+            margin: $mid-space 0 auto 0;
+        }
+
+        > mjx-container { /* override MathJaX */
+            margin: $mid-space 0 auto 0 !important;
+        }
+
         > header {
-            //grid-template-columns: auto 1fr auto;
-            grid-template-columns: 1fr auto 1fr;
-            aside:first-of-type {
-                text-align: left;
-                padding-left: $grid-gap;
-            }
-            aside:last-of-type {
-                text-align: right;
-                padding-right: $grid-gap;
-                grid-template-columns: auto auto;
-                justify-content: end;
-            }
-            h1 {
-                font-size: 2.5rem !important;
-            }
+            background: $color-bg-dark;
+            color: $color-title;
+            margin: 0 (-$mid-space) auto (-$mid-space);
+            padding: $thin-space $mid-space;
 
-            address {
-                font-size: 1rem !important;
+            > h3 {
+                font-weight: 500;
             }
         }
-        > footer {
-            grid-template-columns: 1fr auto 1fr;
-            > :first-child {
-                text-align: left;
-                padding-left: $grid-gap;
-            }
-            > :last-child {
-                text-align: right;
-                padding-right: $grid-gap;
-            }
-        }
-        > main {
-            overflow: hidden;
-        }
-    }
-}
 
-html, body {
-    height: 100%;
-    width: 100%;
-}
-
-body {
-    font-family: 'Fira Sans Condensed', 'Fira Sans', sans-serif;
-    margin: 0;
-
-    > header, > footer {
-        align-items: center;
-        background: $color-header-bg;
-        color: $color-header-text;
-        display: grid;
-        grid-gap: $mid-space;
-        padding: $mid-space;
-        text-align: center;
-    }
-
-    > header {
-        font-size: 80%;
-
-        img {
-            max-height: $header-img-height;
+        pre {
+            overflow-x: auto;
+            overflow-y: hidden;
+            max-width: 100%;
         }
 
-        h1 {
-            font-size: 1.5rem;
-            font-weight: 600;
+        hr {
+            border-width: thin 0 0 0;
         }
 
-        h2 {
-            font-size: 1.15rem;
-            font-weight: 500;
-        }
-
-        address {
-            margin-bottom: $thin-space;
-            margin-top: $thin-space;
-        }
-
-        .publication-info {
-            display: none;
-        }
-
-        time {
-            margin-top: $thin-space;
-        }
-
-        aside:last-of-type {
-            display:grid;
-            grid-template-columns: auto auto;
-            a {
-                display: grid;
-                align-content: center;
-            }
-        }
-    }
-}
-
-main {
-    box-sizing: border-box;
-    min-height: 0;
-
-    > * {
-        box-sizing: border-box;
-    }
-
-    > figure {
-        align-content: center;
-        display: flex;
-        justify-content: center;
-    }
-
-    img, object {
-        align-self: center;
-        justify-self: center;
-        max-width: 100%;
-        vertical-align: middle;
-    }
-
-    figure {
-        text-align: center;
-
-        img {
-            width: 100%;
-        }
-
-        img:first-of-type:last-of-type,
-        object:first-of-type:last-of-type {
-            display: block;
-            margin: auto;
-        }
-
-        figcaption {
-            display: block;
-            margin-top: $mid-space;
-        }
-    }
-}
-
-article {
-    background: $color-bg-light;
-    display: flex;
-    flex-direction: column;
-    hyphens: none;
-    line-height: 1.35;
-    padding: 0 $mid-space $mid-space $mid-space;
-
-    p, ul, ol, pre, div, figure, hr {
-        margin: 0;
-    }
-
-    > *, > p, > ul, > ol, > pre, > div, > figure, > hr {
-        margin: $mid-space 0 auto 0;
-    }
-
-    > mjx-container { /* override MathJaX */
-        margin: $mid-space 0 auto 0 !important;
-    }
-
-    > header {
-        background: $color-bg-dark;
-        color: $color-title;
-        margin: 0 (-$mid-space) auto (-$mid-space);
-        padding: $thin-space $mid-space;
-
-        > h3 {
-            font-weight: 500;
-        }
-    }
-
-    pre {
-        overflow-x: auto;
-        overflow-y: hidden;
-        max-width: 100%;
-    }
-
-    hr {
-        border-width: thin 0 0 0;
-    }
-
-    ul, ol {
-        padding: 0;
-
-        > li {
-            list-style-type: none;
-            margin-left: 1.25em;
-            margin-bottom: $thin-space;
-
-            &::before {
-                display: inline-block;
-                margin-left: -1em;
-            }
-
-            &:last-child {
-                margin-bottom: 0;
-            }
-        }
-    }
-
-    ol {
-        counter-reset: item;
-
-        > li::before {
-            // color: $color-accent;
-            content: counter(item) ". ";
-            counter-increment: item;
-            font-weight: 500;
-            width: 1em;
-        }
-    }
-
-    ul > li::before {
-        background: $color-accent;
-        border-radius: 100%;
-        content: " ";
-        height: 0.35em;
-        vertical-align: middle;
-        width: 0.35em;
-        margin-right: 0.65em;
-    }
-
-    ul.inline {
-        padding-left: 0;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-
-        li {
-            display: inline;
-            margin: $thin-space-em $mid-space-em;
+        ul, ol {
             padding: 0;
 
-            &::before {
-                display: none;
+            > li {
+                list-style-type: none;
+                margin-left: 1.25em;
+                margin-bottom: $thin-space;
+
+                &::before {
+                    display: inline-block;
+                    margin-left: -1em;
+                }
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+
+        ol {
+            counter-reset: item;
+
+            > li::before {
+                // color: $color-accent;
+                content: counter(item) ". ";
+                counter-increment: item;
+                font-weight: 500;
+                width: 1em;
+            }
+        }
+
+        ul > li::before {
+            background: $color-accent;
+            border-radius: 100%;
+            content: " ";
+            height: 0.35em;
+            vertical-align: middle;
+            width: 0.35em;
+            margin-right: 0.65em;
+        }
+
+        ul.inline {
+            padding-left: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+
+            li {
+                display: inline;
+                margin: $thin-space-em $mid-space-em;
+                padding: 0;
+
+                &::before {
+                    display: none;
+                }
             }
         }
     }
+
+    ////////////////////////////////
+    // User customization classes //
+    ////////////////////////////////
+
+    .boxed {
+        border: thin solid $color-accent;
+        padding: $thin-space;
+    }
+
+    .center {
+        text-align: center;
+    }
+
+    .center-self {
+        justify-self: center;
+        align-self: center;
+    }
+
+    .justify-center {
+        justify-self: center;
+    }
+
+    .align-center {
+        align-self: center;
+    }
+
+    .xxs { font-size: xx-small; }
+    .xs { font-size: x-small; }
+    .small { font-size: small; }
+    .medium { font-size: medium; }
+    .large { font-size: large; }
+    .xl { font-size: x-large; }
+    .xxl { font-size: xx-large; }
+    .xxxl { font-size: xxx-large; }
+
+    .columns, .columns-top, .columns-center, .columns-bottom {
+        display: grid;
+        grid-auto-flow: column;
+        grid-gap: $mid-space;
+    }
+
+    .columns-top { align-items: start; }
+    .columns-center { align-items: center; }
+    .columns-bottom { align-items: end; }
+
+    br.qquad {
+        content: " ";
+        margin-right: 4em;
+    }
+
+    .separator:empty {
+        display: block;
+    }
+
+    .contents {
+        display: contents;
+    }
+
+    ////////////////////
+    // Mathjax config //
+    ////////////////////
+
+    mjx-container {
+        margin: 0 !important;
+        overflow-x: auto;
+        overflow-y: hidden;
+    }
+
+    .MJXc-display,
+    .MJXp-display,
+    .MathJax_Display,
+    .MathJax_Preview,
+    .MathJax_SVG_Display,
+    .MathJax_SVG_Preview,
+    .MathJax_PHTML_Display,
+    .MathJax_PHTML_Preview,
+    .MathJax_MathML {
+        @extend mjx-container
+    }
+
+    .MathJax_Preview:empty {
+        display: none;
+    }
 }
 
-////////////////////////////////
-// User customization classes //
-////////////////////////////////
 
-.boxed {
-    border: thin solid $color-accent;
-    padding: $thin-space;
-}
-
-.center {
-    text-align: center;
-}
-
-.center-self {
-    justify-self: center;
-    align-self: center;
-}
-
-.justify-center {
-    justify-self: center;
-}
-
-.align-center {
-    align-self: center;
-}
-
-.xxs { font-size: xx-small; }
-.xs { font-size: x-small; }
-.small { font-size: small; }
-.medium { font-size: medium; }
-.large { font-size: large; }
-.xl { font-size: x-large; }
-.xxl { font-size: xx-large; }
-.xxxl { font-size: xxx-large; }
-
-.columns, .columns-top, .columns-center, .columns-bottom {
-    display: grid;
-    grid-auto-flow: column;
-    grid-gap: $mid-space;
-}
-
-.columns-top { align-items: start; }
-.columns-center { align-items: center; }
-.columns-bottom { align-items: end; }
-
-br.qquad {
-    content: " ";
-    margin-right: 4em;
-}
-
-.separator:empty {
-    display: block;
-}
-
-.contents {
-    display: contents;
-}
-
-////////////////////
-// Mathjax config //
-////////////////////
-
-mjx-container {
-    margin: 0 !important;
-    overflow-x: auto;
-    overflow-y: hidden;
-}
-
-.MJXc-display,
-.MJXp-display,
-.MathJax_Display,
-.MathJax_Preview,
-.MathJax_SVG_Display,
-.MathJax_SVG_Preview,
-.MathJax_PHTML_Display,
-.MathJax_PHTML_Preview,
-.MathJax_MathML {
-    @extend mjx-container
-}
-
-.MathJax_Preview:empty {
-    display: none;
-}
+//$color-title: #ffffff !default;
+//$color-accent: #FFBF00 !default;
+//$color-bg-light: #F5F5DC !default;
+//$color-bg-dark: #000000 !default;
+//$color-header-bg: #ffffff !default;
+//$color-header-text: #000000 !default;
