add verif projects poster

--- a/posters/posters/2023-slice_winter-cov_model/index.jinja2
+++ b/posters/posters/2023-slice_winter-cov_model/index.jinja2
@@ -8,7 +8,7 @@
 {# Change ‘venue’ to a conference or workshop name if any #}
 {% set venue = "CS294" %}
 {# ‘webpage_title’ is displayed in the browser’s top bar #}
-{% set webpage_title = poster_title + " — " + poster_subtitle %}
+{% set webpage_title = poster_title %}
 {# ‘project_url’ is used in the footer and for the logo #}
 {% set project_url = "https://github.com/vighneshiyer/cov-proxy-model" %}
 
