--- a/posters/posters/2022-oscar-simcommand/index.jinja2
+++ b/posters/posters/2022-oscar-simcommand/index.jinja2
@@ -8,7 +8,7 @@
 {# Change ‘venue’ to a conference or workshop name if any #}
 {% set venue = "OSCAR 22" %}
 {# ‘webpage_title’ is displayed in the browser’s top bar #}
-{% set webpage_title = poster_title + " — " + poster_subtitle %}
+{% set webpage_title = poster_title + " — " + venue %}
 {# ‘project_url’ is used in the footer and for the logo #}
 {% set project_url = "https://github.com/vighneshiyer/simcommand" %}
 
