--- a/posters/posters/tutorial/index.jinja2
+++ b/posters/posters/tutorial/index.jinja2
@@ -300,7 +300,7 @@
   </article>
 
   <figure>
-    <img style="width: 70%" src="figs/csail/logo.svg" alt="Project logo" />
+    <img style="width: 70%" src="figs/logos/logo.svg" alt="Project logo" />
     <figcaption>A stand-alone figure to fill the remaining space.</figcaption>
   </figure>
 {% endblock %}
