--- a/posters/templates/mit/mit.jinja2
+++ b/posters/templates/mit/mit.jinja2
@@ -2,12 +2,12 @@
 
 {# Logos shown on the left side #}
 {% block header_left %}
-  <a href="{{ project_url }}"><img src="figs/csail/logo.svg" alt="Tutorial logo"></a>
+  <a href="{{ project_url }}"><img src="figs/logos/logo.svg" alt="Tutorial logo"></a>
 {% endblock %}
 
 {# Logos shown on the right side #}
 {% block header_right %}
-  <a href="https://csail.mit.edu"><img style="background: white" src="figs/csail/csail.png" alt="MIT CSAIL Logo"></a>
+  <a href="https://csail.mit.edu"><img style="background: white" src="figs/logos/csail.png" alt="MIT CSAIL Logo"></a>
 {% endblock %}
 
 {% block highlightjs_theme %}
