--- a/posters/templates/slice/slice.jinja2
+++ b/posters/templates/slice/slice.jinja2
@@ -2,10 +2,10 @@
 
 {# Logos shown on the left side #}
 {% block header_left %}
-  <a href="https://slice.eecs.berkeley.edu/"><img src="figs/slice/slice_logo.png" alt="SLICE Lab"></a>
+  <a href="https://slice.eecs.berkeley.edu/"><img src="figs/logos/slice_logo.png" alt="SLICE Lab"></a>
 {% endblock %}
 
 {# Logos shown on the right side #}
 {% block header_right %}
-  <a href="https://berkeley.edu"><img src="figs/slice/berkeley_logo.svg" alt="UC Berkeley"></a>
+  <a href="https://berkeley.edu"><img src="figs/logos/berkeley_logo.svg" alt="UC Berkeley"></a>
 {% endblock %}
